Name:               LensProposal
Version:            0.0.1
License:            BSD3
License-File:       LICENSE
Author:             Tony Morris <ʇǝu˙sıɹɹoɯʇ@ןןǝʞsɐɥ>
Maintainer:         Tony Morris
Copyright:          Tony Morris
Synopsis:           A proposal for lenses in a haskell-like language
Category:           Development
Description:        A proposal for lenses in a haskell-like language
Homepage:           https://github.com/tonymorris/lens-and-friends
Cabal-Version:      >= 1.6
Build-Type:         Simple

Source-Repository   head
  Type:             git
  Location:         git@github.com:tonymorris/lens-and-friends.git

Flag                small_base
  Description:      Choose the new, split-up base package.

Library
  Build-Depends:
                    base < 5 && >= 3

  GHC-Options:
                    -Wall

  Hs-Source-Dirs:
                    src

  Exposed-Modules:
                    M

