Name:               LensProposal
Version:            0.0.1
License:            BSD3
License-File:       LICENSE
Author:             Tony Morris <ʇǝu˙sıɹɹoɯʇ@ןןǝʞsɐɥ>
Maintainer:         Tony Morris
Copyright:          Tony Morris
Synopsis:           A proposal for lenses in a haskell-like language
Category:           Development
Description:        A proposal for lenses in a haskell-like language
Homepage:           https://github.com/tonymorris/lens-proposal
Cabal-Version:      >= 1.6
Build-Type:         Simple

Source-Repository   head
  Type:             git
  Location:         git@github.com:tonymorris/lens-proposal.git

Flag                small_base
  Description:      Choose the new, split-up base package.

Library
  Build-Depends:
                    base < 5 && >= 3

  GHC-Options:
                    -Wall
                    -XNoImplicitPrelude

  Hs-Source-Dirs:
                    src

  Exposed-Modules:
                      Control.Typeclassopaedia
                    , Control.Typeclassopaedia.Applicative
                    , Control.Typeclassopaedia.Apply
                    , Control.Typeclassopaedia.Bind
                    , Control.Typeclassopaedia.Category
                    , Control.Typeclassopaedia.Comonad
                    , Control.Typeclassopaedia.Cozip
                    , Control.Typeclassopaedia.Extend
                    , Control.Typeclassopaedia.Functor
                    , Control.Typeclassopaedia.Monad
                    , Control.Typeclassopaedia.Monoid
                    , Control.Typeclassopaedia.Semigroup
                    , Control.Typeclassopaedia.Semigroupoid
                    , Control.Typeclassopaedia.Tensor
                    , Control.Typeclassopaedia.Unzip
                    , Control.Typeclassopaedia.Zip

