Name:               LensProposal
Version:            0.0.1
License:            BSD3
License-File:       LICENSE
Author:             Tony Morris <ʇǝu˙sıɹɹoɯʇ@ןןǝʞsɐɥ>
Maintainer:         Tony Morris
Copyright:          Tony Morris
Synopsis:           A proposal for lenses in a haskell-like language
Category:           Development
Description:        A proposal for lenses in a haskell-like language
Homepage:           https://github.com/tonymorris/lens-proposal
Cabal-Version:      >= 1.6
Build-Type:         Simple

Source-Repository   head
  Type:             git
  Location:         git@github.com:tonymorris/lens-proposal.git

Flag                small_base
  Description:      Choose the new, split-up base package.

Library
  Build-Depends:
                      base < 5 && >= 3
                    , text >= 0.11.1

  GHC-Options:
                    -Wall

  Extensions:
                    NoImplicitPrelude
                    RankNTypes

  Hs-Source-Dirs:
                    src

  Exposed-Modules:
                      Control
                    , Control.Applicative
                    , Control.Apply
                    , Control.Bind
                    , Control.Category
                    , Control.Comonad
                    , Control.ComonadHoist
                    , Control.ComonadTrans
                    , Control.Cozip
                    , Control.Extend
                    , Control.Functor
                    , Control.Monad
                    , Control.MonadHoist
                    , Control.MonadTrans
                    , Control.Monoid
                    , Control.Semigroup
                    , Control.Semigroupoid
                    , Control.Tensor
                    , Control.Traversable
                    , Control.Traversable1
                    , Control.Unzip
                    , Control.Zip
                    , Data
                    , Data.Id
                    , Data.Iso
                    , Data.Lens
                    , Data.LabelledLens
                    , Data.LabelledIso
                    , Data.State
                    , Data.Store

